# fds

.github/workflows/: build-windows.yml
vault/: Cargo.toml  README.md
vault/src/: container.rs  crypto.rs  fsmeta.rs  gui.rs  main.rs
