[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
hkdf = { version = "0.12", features = ["std"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
clap = { version = "4", features = ["derive"] }
zeroize = "1"
sha2 = "0.10"

# GUI (single-exe desktop app)
# glow-бэкенд проще для сборки/распространения (без wgpu-стека)
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
rfd = "0.14"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
tempfile = "3"